modified:   piframestreamer.py 	modified:   www/config.json 	modified:   www/index.html

--- a/www/config.json
+++ b/www/config.json
@@ -1,1 +1,1 @@
-{"transitiontime": 20, "showtemp": "true", "showclock": "true"}
+{"transitiontime": 30, "showtemp": true, "showclock": true, "rotation": 0}
